syntax = "proto3";

package protos;

option go_package = "orch-go/gen/protos;protos";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service UserCredentialService {
  rpc GetAll (google.protobuf.Empty) returns (GetAllUserCredentialsResponse);
  rpc GetById (GetUserCredentialByIdRequest) returns (UserCredentialModel);
  rpc Add (AddUserCredentialRequest) returns (UserCredentialModel);
  rpc Update (UpdateUserCredentialRequest) returns (google.protobuf.Empty);
  rpc Delete (DeleteUserCredentialRequest) returns (google.protobuf.Empty);
}

message UserCredentialModel {
  int32 customer_id = 1;
  string username = 2;
  string password_hash = 3;
  optional google.protobuf.Timestamp updated_at = 4;
}

message GetAllUserCredentialsResponse {
  repeated UserCredentialModel user_credentials = 1;
}

message GetUserCredentialByIdRequest {
  int32 customer_id = 1;
}

message AddUserCredentialRequest {
  int32 customer_id = 1;
  string username = 2;
  string password_hash = 3;
}

message UpdateUserCredentialRequest {
  int32 customer_id = 1;
  string username = 2;
  string password_hash = 3;
}

message DeleteUserCredentialRequest {
  int32 customer_id = 1;
}
